# tower_of_hanoi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todolist.md
src/includes/stack/: linked_list.hpp  stack.hpp
src/includes/state/: state.hpp
src/includes/tower_of_hanoi/: CMakeLists.txt  tower_of_hanoi.cpp  tower_of_hanoi.hpp
src/main/: main.cpp
